--- a/external/firebird/firebird-macosx.patch.1
+++ b/external/firebird/firebird-macosx.patch.1
@@ -27,15 +27,6 @@
  
  PLATFORM_POSTBUILD_TARGET=darwin_postbuild_target
  
-@@ -57,7 +57,7 @@
- 
- LINK_TRACE = $(LIB_LINK) $(LIB_BUNDLE_OPTIONS)
- 
--LINK_CLIENT = $(LIB_LINK) -nodefaultlibs $(LINK_FIREBIRD_CLIENT_SYMBOLS) $(LIB_LINK_OPTIONS) $(LIB_LINK_IMPLIB)\
-+LINK_CLIENT = $(LIB_LINK) $(LINK_FIREBIRD_CLIENT_SYMBOLS) $(LIB_LINK_OPTIONS) $(LIB_LINK_IMPLIB)\
-  $(LIB_CLIENT_LINK_OPTIONS) $(LIB_LINK_SONAME)
- 
- ifeq (@VOID_PTR_SIZE@,8)
 diff -ur firebird.org/builds/posix/postfix.darwin firebird/builds/posix/postfix.darwin
 --- firebird.org/builds/posix/postfix.darwin	2013-07-12 20:55:46.000000000 +0200
 +++ firebird/builds/posix/postfix.darwin	2013-07-15 12:07:36.000000000 +0200
@@ -67,47 +58,44 @@ diff -ur firebird.org/builds/posix/postfix.darwin firebird/builds/posix/postfix.
 +++ firebird/builds/posix/prefix.darwin_i386
 @@ -24,7 +24,7 @@
  # 4. for  CFLAGS, CXXFLAGS, LDFLAGS export '-m32 -arch i386'
- # 5. export MACOSX_DEPLOYMENT_TARGET=10.6
+ # 5. export MACOSX_DEPLOYMENT_TARGET=10.7
  
 -DYLD_LIBRARY_PATH=$(FIREBIRD)/lib
 +DYLD_LIBRARY_PATH:=$(FIREBIRD)/lib:$(DYLD_LIBRARY_PATH)
  export DYLD_LIBRARY_PATH
  
- MACOSX_DEPLOYMENT_TARGET=10.6
-@@ -32,9 +32,9 @@
+ MACOSX_DEPLOYMENT_TARGET=10.7
+@@ -34,8 +34,8 @@
  
  OS_ServerFiles=inet_server.cpp
  
--PROD_FLAGS=-O1 -DDARWIN -pipe -p -MMD -fPIC -fno-common -arch i386 -mmacosx-version-min=10.6
--DEV_FLAGS=-ggdb -DDARWIN -pipe -p -MMD -fPIC -fno-common -Wall -arch i386 -mmacosx-version-min=10.6
--CXXFLAGS:=$(CXXFLAGS) -fvisibility-inlines-hidden -fvisibility=hidden -fno-weak
-+PROD_FLAGS=-O1 -DDARWIN -pipe -p -MMD -fPIC -fno-common
-+DEV_FLAGS=-ggdb -DDARWIN -pipe -p -MMD -fPIC -fno-common -Wall
-+CXXFLAGS:=$(CXXFLAGS) -fvisibility-inlines-hidden -fvisibility=hidden
- EMBED_UTIL_TARGETS=gstat gds_relay gsec fbguard nbackup fb_lock_print fbsvcmgr fbtracemgr
- CLIENT_UTIL_TARGETS=gds_relay gstat gsec fbguard fbmgr_bin nbackup fb_lock_print fbsvcmgr \
- 	fbtracemgr
+-PROD_FLAGS=-O1 -DDARWIN -pipe -p -MMD -fPIC -fno-common -arch i386 -mmacosx-version-min=10.7
+-DEV_FLAGS=-ggdb -DDARWIN -pipe -p -MMD -fPIC -fno-common -Wall -arch i386 -mmacosx-version-min=10.7
++PROD_FLAGS=-O1 -DDARWIN -pipe -p -MMD -fPIC -fno-common -arch i386
++DEV_FLAGS=-ggdb -DDARWIN -pipe -p -MMD -fPIC -fno-common -Wall -arch i386
+ CXXFLAGS:=$(CXXFLAGS) -fvisibility-inlines-hidden -fvisibility=hidden
+ EMBED_UTIL_TARGETS=gstat gsec fbguard nbackup fb_lock_print fbsvcmgr fbtracemgr
+ CLIENT_UTIL_TARGETS=gstat gsec fbguard fbmgr_bin nbackup fb_lock_print fbsvcmgr fbtracemgr
 --- firebird.org/builds/posix/prefix.darwin_x86_64
 +++ firebird/builds/posix/prefix.darwin_x86_64
 @@ -19,7 +19,7 @@
  #
- # Default build from 10.6
+ # Default build from 10.7 using Clang
  
 -DYLD_LIBRARY_PATH=$(FIREBIRD)/lib
 +DYLD_LIBRARY_PATH:=$(FIREBIRD)/lib:$(DYLD_LIBRARY_PATH)
  export DYLD_LIBRARY_PATH
  
- MACOSX_DEPLOYMENT_TARGET=10.6
-@@ -27,9 +27,9 @@
+ MACOSX_DEPLOYMENT_TARGET=10.7
+@@ -27,8 +27,8 @@
  
  OS_ServerFiles=inet_server.cpp
  
--PROD_FLAGS=-O1 -DDARWIN -pipe -p -MMD -fPIC -fno-common -mmacosx-version-min=10.6
--DEV_FLAGS=-ggdb -DDARWIN -pipe -p -MMD -fPIC -fno-common -Wall -mmacosx-version-min=10.6
--CXXFLAGS:=$(CXXFLAGS) -fvisibility-inlines-hidden -fvisibility=hidden -fno-weak
-+PROD_FLAGS=-O1 -DDARWIN -pipe -p -MMD -fPIC -fno-common
-+DEV_FLAGS=-ggdb -DDARWIN -pipe -p -MMD -fPIC -fno-common -Wall
-+CXXFLAGS:=$(CXXFLAGS) -fvisibility-inlines-hidden -fvisibility=hidden
- EMBED_UTIL_TARGETS=gstat gds_relay gsec fbguard nbackup fb_lock_print fbsvcmgr fbtracemgr
- CLIENT_UTIL_TARGETS=gds_relay gstat gsec fbguard fbmgr_bin nbackup fb_lock_print fbsvcmgr \
- 	fbtracemgr
+-PROD_FLAGS=-O1 -DDARWIN -pipe -MMD -fPIC -fno-common -mmacosx-version-min=10.7
+-DEV_FLAGS=-ggdb -DDARWIN -pipe -MMD -fPIC -fno-common -Wall -mmacosx-version-min=10.7
++PROD_FLAGS=-O1 -DDARWIN -pipe -MMD -fPIC -fno-common
++DEV_FLAGS=-ggdb -DDARWIN -pipe -MMD -fPIC -fno-common -Wall
+ CXXFLAGS:=$(CXXFLAGS) -fvisibility-inlines-hidden -fvisibility=hidden
+ EMBED_UTIL_TARGETS=gstat gsec fbguard nbackup fb_lock_print fbsvcmgr fbtracemgr
+ CLIENT_UTIL_TARGETS=gstat gsec fbguard fbmgr_bin nbackup fb_lock_print fbsvcmgr fbtracemgr 
+
