--- a/extras/source/autotext/lang/hu/standard/BlockList.xml
+++ b/extras/source/autotext/lang/hu/standard/BlockList.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <block-list:block-list xmlns:block-list="http://openoffice.org/2001/block-list" block-list:list-name="Standard">
-  <block-list:block block-list:abbreviated-name="2011" block-list:package-name="2011" block-list:name="2011. hónap nap" block-list:unformatted-text="false"/>
-  <block-list:block block-list:abbreviated-name="2012" block-list:package-name="2012" block-list:name="2012. hónap nap" block-list:unformatted-text="false"/>
-  <block-list:block block-list:abbreviated-name="2013" block-list:package-name="2013" block-list:name="2013. hónap nap" block-list:unformatted-text="false"/>
-  <block-list:block block-list:abbreviated-name="2014" block-list:package-name="2014" block-list:name="2014. hónap nap" block-list:unformatted-text="false"/>
-  <block-list:block block-list:abbreviated-name="2010" block-list:package-name="2010" block-list:name="2010. hónap nap" block-list:unformatted-text="false"/>
+  <block-list:block block-list:abbreviated-name="2016" block-list:package-name="2016" block-list:name="2016. ... (aktuális dátum)" block-list:unformatted-text="false"/>
   <block-list:block block-list:abbreviated-name="AL" block-list:package-name="AL" block-list:name="AJÁNLOTT LEVÉL" block-list:unformatted-text="true"/>
   <block-list:block block-list:abbreviated-name="B" block-list:package-name="B" block-list:name="BIZALMAS" block-list:unformatted-text="true"/>
   <block-list:block block-list:abbreviated-name="EL" block-list:package-name="EL" block-list:name="Előzmény:" block-list:unformatted-text="true"/>
