--- a/sc/README
+++ b/sc/README
@@ -1,11 +1,6 @@
 Spreadsheet application code.
 
-
-Debug mode:
-
-There is a mode to dump some information in a dbgutil build.
-
-== Graphical information ==
+You can dump some information in a dbgutil build:
 
 === CTRL+SHIFT+F12 ===
 
